src/test/ui/feature-gate-negate-unsigned.stderr
error[E0600]: cannot apply unary operator `-` to type `usize`
  --> $DIR/feature-gate-negate-unsigned.rs:20:23
   |
LL |     let _max: usize = -1;
   |                       ^^

error[E0600]: cannot apply unary operator `-` to type `u8`
  --> $DIR/feature-gate-negate-unsigned.rs:24:14
   |
LL |     let _y = -x;
   |              ^^

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0600"
